--- a/_config.yml
+++ b/_config.yml
@@ -18,15 +18,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: DominicSt's Blof
+email: dom@dominicst.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
+url: "http://dominicst.com" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: dominicst
 github_username:  jekyll
 
 # Build settings
@@ -50,6 +50,6 @@ plugins:
 #   - Gemfile.lock
 #   - node_modules/
 #   - vendor/bundle/
-#   - vendor/cache/
+#   - vendor/YYcache/
 #   - vendor/gems/
 #   - vendor/ruby/
