--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,8 @@ twitter_username: DominicSt
 github_username:  DominicSt
 
 # Build settings
-remote_theme: fongandrew/hydeout
+#theme: jekyll-theme-hydejack
+remote_theme: samarsault/plainwhite-jekyll
 plugins:
   - jekyll-feed
   - jekyll-sitemap
