--- a/_config.yml
+++ b/_config.yml
@@ -115,6 +115,6 @@ tag_archive:
 
 # SEO
 
-
+google-site-verification: "omNIsgumP1xg9OlH0_W3ndT2wCk1Dq43jLUrDrMXUYQ"
 head_scripts:
   - /assets/js/_analytics.js
