Added bing verification

--- a/_config.yml
+++ b/_config.yml
@@ -116,6 +116,7 @@ tag_archive:
 # SEO
 
 google-site-verification: "omNIsgumP1xg9OlH0_W3ndT2wCk1Dq43jLUrDrMXUYQ"
+bing_site_verification: "DE16FD77631E75AB53BE6B7A48A43BB1"
 
 analytics:
   provider: "google-gtag"
